<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.banyuwangi.wisatabanyuwangi.fragments.PanggilanFragment"
    android:padding="16dp"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_red_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_polisi"
        android:id="@+id/btnCallPolisi"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_light_blue_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_ambulan1"
        android:id="@+id/btnCallAmbulan1"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_light_blue_600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_ambulan2"
        android:id="@+id/btnCallAmbulan2"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_amber_900"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_damkar"
        android:id="@+id/btnCallDamkar"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_amber_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_sar"
        android:id="@+id/btnCallSar"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_blue_900"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_pln"
        android:id="@+id/btnCallPln"/>
    <Button
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_green_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_posko"
        android:id="@+id/btnCallPosko"/>

</LinearLayout>
